tests/expected_invalid_public_proves_private_proof.diag.out
<input>:6:34: error: public API cannot reference private type 'Receipt'
    public fn check() -> Unit proves Receipt {}
                                     ^^^^^^^
